fix(center): Fix layout issue in message input box. 	- #JND-1191 #resolve

--- a/client/app/center/center.css
+++ b/client/app/center/center.css
@@ -514,7 +514,7 @@ by ysyun 2015.2.25
   left: 0;
   right: 0;
   bottom: 0;
-  height: 60px;
+  height: 54px;
 }
 .footer #primary_file_button {
   border: none;
